# StereoOnSteroids

./: CMakeLists.txt  Cameras.cpp  Cameras.hpp  DisparityMapCalculator.cpp  DisparityMapCalculator.hpp  FakeCameras.cpp  FakeCameras.hpp  ICameras.cpp  ICameras.hpp  ImageCorrection.cpp  ImageCorrection.hpp  README.md  StereoOnSteroids.sln  Task.hpp  TaskManager.cpp  TaskManager.hpp  Timer.cpp  Timer.hpp  calib_intrinsic.cpp  calib_stereo.cpp  disparity.cpp  errorCalculator.py  header.hpp  read.cpp  settings.hpp  undistort_rectify.cpp
Calibration/: CMakeLists.txt  calib_intrinsic.cpp  calib_stereo.cpp  disparity.cpp  header.h  read_images.cpp  undistort_rectify.cpp
StereoOnSteroids/: Calibration.cpp  Calibration.h  Cameras.cpp  Cameras.h  ExtrinsicCalibration.cpp  ExtrinsicCalibration.h  IntrinsicCalibration.cpp  IntrinsicCalibration.h  Preview.cpp  Preview.h  StereoOnSteroids.vcxproj  StereoOnSteroids.vcxproj.filters  UndistortionRectification.cpp  UndistortionRectification.h  main.cpp  read_images.py
